[metadata]
name = pwebs
author = iRMB TU Braunschweig
author-email = webmaster@irmb.tu-bs.de
summary = Knuerr and Rittal cluster guard with nagios bindings.
description-file = README
license = GPLv2
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Administrators
	Intended Audience :: Information Technology
	License :: OSI Approved :: GPLv2
	Operating System :: Linux
	Programming Language :: Python
[files]
packages =
    pwebs

[entry_points]
console_scripts =
    check_ludwig = pwebs.main:run
